--- a/career.html
+++ b/career.html
@@ -147,32 +147,32 @@
             </div>
             <div class="row p-0 image_with_form_container align-items-center">
                 <div class="col-12 pe-0 form_container order-1 order-sm-0 col-sm-7 ">
-                    <form class="form_container_in needs-validation" enctype="multipart/form-data" id="careerForm" novalidate>
+                    <form class="mt-4 form_container_in needs-validation" enctype="multipart/form-data" id="careerForm" novalidate>
                         <div class="row form_field_container flex-column flex-sm-row">
-                            <div class="col">
+                            <div class="col h-set">
                                 <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
                                     class="form-control first_name field" aria-label="First name" required />
                             </div>
-                            <div class="col">
+                            <div class="col h-set">
                                 <input type="text" name="last_name" id="customer_last_name" placeholder="Last Name*"
                                     class="form-control field" aria-label="Last name" required />
                                 <p class="text-danger" id="customer_lname"></p>
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
-                            <div class="col">
+                            <div class="col h-set">
                                 <input type="email" name="email" id="customer_email" placeholder="Email*" required
                                     class="field form-control" />
                                 <p class="text-danger" id="customer_email_w"></p>
                             </div>
-                            <div class="col">
+                            <div class="col h-set">
                                 <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
                                     required class="field form-control" />
                                 <p class="text-danger" id="customer_number_w"></p>
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
-                            <div class="col">
+                            <div class="col h-set">
                                 <div
                                     class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
                                     <input type='file' id="customer_data" name="resume"
