--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
 
 </head>
-
 <body class="d-xs-none d-sm-block">
     <a href="#top">
         <div class="scrollbar back d-none ">
@@ -551,34 +550,32 @@
                                 <p>Join us in our journey to redefine excellence in lubrication and drive towards a
                                     cleaner, more efficient future for all.</p>
                             </div>
-                            <div class="Fueling-Excellence-sab">
-                                <div class="accordion" id="accordionExample">
-                                    <button
-                                        class="accordion border-top d-flex Fueling-text justify-content-between col-12">
-                                        <span> Vision</span>
-                                        <span><i class="fa-solid fa-minus"></i></span>
-                                    </button>
-                                    <div class="panel">
-                                        <div class="accordion-body p-0">
-                                            <p>To develop and manufacture specialty lubricant that provide value of
-                                                money along with exceptional services support meeting customers'
-                                                expectations</p>
-                                        </div>
+                            <div class="col">
+                                <div class="tabs">
+                                  <div class="tab">
+                                    <input class="Fueling-Excellence_input" type="radio" id="rd1" name="rd">
+                                    <label class="tab-label" for="rd1"><span>Vision</span></label>
+                                    <div class="tab-content">
+                                        To develop and manufacture
+                                        specialty lubricant that provide
+                                        value of money along with
+                                        exceptional services support
+                                        meeting customers' expectations
                                     </div>
-                                    <button
-                                        class="accordion border-top d-flex Fueling-text justify-content-between col-12">
-                                        <span> Mission</span>
-                                        <span><i class="fa-solid fa-plus"></i></span>
-                                    </button>
-                                    <div class="panel1">
-                                        <div class="accordion-body p-0">
-                                            <p>To develop and manufacture specialty lubricant that provide value of
-                                                money along with exceptional services support meeting customers'
-                                                expectations</p>
-                                        </div>
+                                  </div>
+                                  <div class="tab">
+                                    <input type="radio"  class="Fueling-Excellence_input" id="rd2" name="rd">
+                                    <label class="tab-label" for="rd2"><span>Mission</span></label>
+                                    <div class="tab-content">
+                                        To develop and manufacture
+                                        specialty lubricant that provide
+                                        value of money along with
+                                        exceptional services support
+                                        meeting customers' expectations
                                     </div>
+                                  </div>
                                 </div>
-                            </div>
+                              </div>
                         </div>
                     </div>
                 </div>
@@ -653,10 +650,14 @@
     <!-- End: Global Excellence -->
     <!-- Start: Contact -->
     <section class="map-section section-padding1">
-        <div class="Fueling-Excellence-title text-center">
-            <h3 class="mb-3">Contact Us</h3>
+       <div class="container">
+        <div class="row">
+            <div class="Fueling-Excellence-title text-center">
+                <h3 class="mb-3">Contact Us</h3>
+            </div>
+            <div id="chartdiv"></div>
         </div>
-        <div id="chartdiv"></div>
+       </div>
     </section>
     <!-- End:  Contact -->
     <!-- Footer start -->
@@ -668,7 +669,7 @@
                         <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/nav_logo.png" alt="logo image"
                                 width="340" class="footer-logo-image img-fluid "></a>
                         <p class="footer-text">Powering Performance, Maximizing Efficiency: Ecomax - Your Engine's Best
-                            Companio </p>
+                            Companion </p>
                         <div class="d-flex footer-icon-set">
                             <div class="d-flex justify-content-center align-items-center footer-icon-container">
                                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -917,161 +918,193 @@
     </script>
     <script>
         try {
-            // Create chart instance
-            var chart = am4core.create("chartdiv", am4maps.MapChart);
-            // Make the chart fade-in on init
-            chart.hiddenState.properties.opacity = 0;
-            // Set geodata
-            chart.geodata = am4geodata_worldLow;
-            // Set projection to be used
-            // @see {@link https://www.amcharts.com/docs/v4/reference/mapchart/#projection_property}
-            chart.projection = new am4maps.projections.Miller();
-            // Create map polygon series
-            var polygonSeries = chart.series.push(new am4maps.MapPolygonSeries());
-            // polygonSeries.fill= "rgba(58, 122, 67, 1)";
-            // Exclude Antartica
-            polygonSeries.exclude = ["AQ"];
-            // Make map load polygon (like country names) data from GeoJSON
-            polygonSeries.useGeodata = true;
-            // Configure series
-            var polygonTemplate = polygonSeries.mapPolygons.template;
-            polygonTemplate.tooltipText = "{name}";
-            polygonTemplate.polygon.fill = "rgba(58, 122, 67, .4)";
-            polygonTemplate.polygon.fillOpacity = 0.6;
-            // Create hover state and set alternative fill color
-            var hs = polygonTemplate.states.create("hover");
-            hs.properties.fill = chart.colors.getIndex(0);
-            // Add image series
-            var imageSeries = chart.series.push(new am4maps.MapImageSeries());
-            imageSeries.mapImages.template.propertyFields.longitude = "longitude";
-            imageSeries.mapImages.template.propertyFields.latitude = "latitude";
-            imageSeries.mapImages.template.tooltipText = "{title}";
-            imageSeries.mapImages.template.propertyFields.url = "url";
-            var circle = imageSeries.mapImages.template.createChild(am4core.Image);
-            circle.href = "https://ik.imagekit.io/ecomax/assets/images/marker-icon.png";
-            circle.width = 30;
-            circle.height = 30;
-            circle.nonScaling = true;
-            circle.horizontalCenter = "middle";
-            circle.verticalCenter = "bottom";
-            var circle2 = imageSeries.mapImages.template.createChild(am4core.Circle);
-            circle2.radius = 2;
-            circle2.propertyFields.fill = "color";
-            circle2.events.on("inited", function (event) {
-                animateBullet(event.target);
-            })
-            function animateBullet(circle) {
-                var animation = circle.animate([{ property: "scale", from: 1, to: 5 }, { property: "opacity", from: 1, to: 0 }], 1000, am4core.ease.circleOut);
-                animation.events.on("animationended", function (event) {
-                    animateBullet(event.target.object);
-                })
-            }
-            var colorSet = new am4core.ColorSet();
-            imageSeries.data = [{
-                "tooltipText": "Myanmar",
-                "latitude": 21.916222,
-                "longitude": 95.955971,
-                "color": colorSet.next()
-            }, {
-                "title": "India",
-                "latitude": 20.593683,
-                "longitude": 78.962883,
-                "color": colorSet.next()
-            }, {
-                "title": "Iraq",
-                "latitude": 33.223190,
-                "longitude": 43.679291,
-                "color": colorSet.next()
-            }, {
-                "title": "Tanzania",
-                "latitude": -8.510342,
-                "longitude": 38.892686,
-                "color": colorSet.next()
-            }, {
-                "title": "Ghana",
-                "latitude": 7.9039267,
-                "longitude": -3.2744616,
-                "color": colorSet.next()
-            }, {
-                "title": "Taiwan",
-                "latitude": 23.6978,
-                "longitude": 120.9605,
-                "color": colorSet.next()
-            }, {
-                "title": "Chad",
-                "latitude": 15.454166,
-                "longitude": 18.732206,
-                "color": colorSet.next()
-            }, {
-                "title": "Zimbabwe",
-                "latitude": -18.9968841,
-                "longitude": 26.909101,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Russia",
-                "latitude": 61.524010,
-                "longitude": 105.318756,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Somalia",
-                "latitude": 5.2420051,
-                "longitude": 41.807918,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Libya",
-                "latitude": 26.2999273,
-                "longitude": 12.8370978,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Kazakhstan",
-                "latitude": 48.1012954,
-                "longitude": 66.7780818,
-                "color": colorSet.next()
-            },
+    // Create chart instance
+    var chart = am4core.create("chartdiv", am4maps.MapChart);
 
+    // Make the chart fade-in on init
+    chart.hiddenState.properties.opacity = 0;
 
-            {
-                "title": "Pakistan",
-                "latitude": 30.3308401,
-                "longitude": 71.247499,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Cambodia",
-                "latitude": 12.5433216,
-                "longitude": 104.8144914,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Brazil",
-                "latitude": -10.00000000,
-                "longitude": -55.00000000,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Australia",
-                "latitude": -27.00000000,
-                "longitude": 133.00000000,
-                "color": colorSet.next()
-            },
-            {
-                "title": "Canada",
-                "latitude": 61.0666922,
-                "longitude": -107.991707,
-                "color": colorSet.next()
-            },
-            {
-                "title": "United States of America",
-                "latitude": 38.673433,
-                "longitude": -100.677040,
-                "color": colorSet.next()
-            }];
+    // Set geodata
+    chart.geodata = am4geodata_worldLow;
+
+    // Set projection to be used
+    // @see {@link https://www.amcharts.com/docs/v4/reference/mapchart/#projection_property}
+    chart.projection = new am4maps.projections.Miller();
+
+    // Create map polygon series
+    var polygonSeries = chart.series.push(new am4maps.MapPolygonSeries());
+
+    // Exclude Antarctica
+    polygonSeries.exclude = ["AQ"];
+
+    // Make map load polygon (like country names) data from GeoJSON
+    polygonSeries.useGeodata = true;
+
+    // Configure series
+    var polygonTemplate = polygonSeries.mapPolygons.template;
+    polygonTemplate.tooltipText = "{name}";
+    polygonTemplate.polygon.fill = "rgba(58, 122, 67, 0.4)";
+    polygonTemplate.polygon.fillOpacity = 0.6;
+
+    // Create hover state and set alternative fill color
+    var hs = polygonTemplate.states.create("hover");
+    hs.properties.fill = chart.colors.getIndex(0);
+
+    // Add image series
+    var imageSeries = chart.series.push(new am4maps.MapImageSeries());
+    imageSeries.mapImages.template.propertyFields.longitude = "longitude";
+    imageSeries.mapImages.template.propertyFields.latitude = "latitude";
+    imageSeries.mapImages.template.tooltipText = "{title}";
+    imageSeries.mapImages.template.propertyFields.url = "url";
+
+    // Add image marker
+    var circle = imageSeries.mapImages.template.createChild(am4core.Image);
+    circle.href = "https://ik.imagekit.io/ecomax/assets/images/marker-icon.png";
+    circle.width = 30;
+    circle.height = 30;
+    circle.nonScaling = true;
+    circle.horizontalCenter = "middle";
+    circle.verticalCenter = "bottom";
+
+    // Add animated circle
+    var circle2 = imageSeries.mapImages.template.createChild(am4core.Circle);
+    circle2.radius = 2;
+    circle2.propertyFields.fill = "color";
+    circle2.events.on("inited", function(event) {
+        animateBullet(event.target);
+    });
+
+    function animateBullet(circle) {
+        var animation = circle.animate([
+            { property: "scale", from: 1, to: 5 },
+            { property: "opacity", from: 1, to: 0 }
+        ], 1000, am4core.ease.circleOut);
+        animation.events.on("animationended", function(event) {
+            animateBullet(event.target.object);
+        });
+    }
+
+    var colorSet = new am4core.ColorSet();
+    imageSeries.data = [
+        {
+            "title": "Myanmar",
+            "latitude": 21.916222,
+            "longitude": 95.955971,
+            "color": colorSet.next()
+        },
+        {
+            "title": "India",
+            "latitude": 20.593683,
+            "longitude": 78.962883,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Iraq",
+            "latitude": 33.223190,
+            "longitude": 43.679291,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Tanzania",
+            "latitude": -8.510342,
+            "longitude": 38.892686,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Ghana",
+            "latitude": 7.9039267,
+            "longitude": -3.2744616,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Taiwan",
+            "latitude": 23.6978,
+            "longitude": 120.9605,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Chad",
+            "latitude": 15.454166,
+            "longitude": 18.732206,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Zimbabwe",
+            "latitude": -18.9968841,
+            "longitude": 26.909101,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Russia",
+            "latitude": 61.524010,
+            "longitude": 105.318756,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Somalia",
+            "latitude": 5.2420051,
+            "longitude": 41.807918,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Libya",
+            "latitude": 26.2999273,
+            "longitude": 12.8370978,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Kazakhstan",
+            "latitude": 48.1012954,
+            "longitude": 66.7780818,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Pakistan",
+            "latitude": 30.3308401,
+            "longitude": 71.247499,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Cambodia",
+            "latitude": 12.5433216,
+            "longitude": 104.8144914,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Brazil",
+            "latitude": -10.000000,
+            "longitude": -55.000000,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Australia",
+            "latitude": -27.000000,
+            "longitude": 133.000000,
+            "color": colorSet.next()
+        },
+        {
+            "title": "Canada",
+            "latitude": 61.0666922,
+            "longitude": -107.991707,
+            "color": colorSet.next()
+        },
+        {
+            "title": "United States of America",
+            "latitude": 38.673433,
+            "longitude": -100.677040,
+            "color": colorSet.next()
         }
-        catch (err) { console.log(err); }
+    ];
+
+    // Disable map's default mouse wheel zoom
+    chart.seriesContainer.events.disableType("doublehit");
+    chart.chartContainer.wheelable = false;
+    chart.seriesContainer.wheelable = false;
+
+} catch (err) {
+    console.log(err);
+}
+
     </script>
     <script>
         $(window).scroll(function () {
