Adde changs for the api and mail functions

--- a/contactus.html
+++ b/contactus.html
@@ -286,11 +286,11 @@
                       class="field form-control" />
               </div>
               <div class="col">
-                  <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
+                  <input type="number" name="phone" id="customer_number" placeholder="Phone Number*"
                       required class="field form-control" />
               </div>
           </div>
-          <div class="row form_field_container flex-column flex-sm-row">
+          <!-- <div class="row form_field_container flex-column flex-sm-row">
               <div class="col">
                   <div class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
                       <input type='file' id="customer_data" name="resume"
@@ -300,10 +300,10 @@
                   </div>
               
               </div>
-          </div>
+          </div> -->
           <div class="row form_field_container flex-column flex-sm-row">
               <div class="col">
-                  <textarea placeholder="Your Message" id="customer_message" name="career_message"
+                  <textarea placeholder="Your Message" id="message" name="message"
                       class="form-control w-100 field message_field" ></textarea>
               </div>
           </div>
