--- a/career.html
+++ b/career.html
@@ -166,7 +166,7 @@
                                 <p class="text-danger" id="customer_email_w"></p>
                             </div>
                             <div class="col h-set">
-                                <input type="number" name="number" id="customer_number" placeholder="Phone Number*"
+                                <input type="number" name="phone" id="customer_number" placeholder="Phone Number*"
                                     required class="field form-control" />
                                 <p class="text-danger" id="customer_number_w"></p>
                             </div>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col">
-                                <textarea placeholder="Your Message" id="customer_message" name="career_message"
+                                <textarea placeholder="Your Message" id="message" name="message"
                                     class="form-control w-100 field message_field"></textarea>
                             </div>
                         </div>
