--- a/contactus.html
+++ b/contactus.html
@@ -290,17 +290,6 @@
                       required class="field form-control" />
               </div>
           </div>
-          <!-- <div class="row form_field_container flex-column flex-sm-row">
-              <div class="col">
-                  <div class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
-                      <input type='file' id="customer_data" name="resume"
-                          class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0"  />
-                      <span class='label' data-js-label>Resume</span>
-                      <span class='button'>Browse</span>
-                  </div>
-              
-              </div>
-          </div> -->
           <div class="row form_field_container flex-column flex-sm-row">
               <div class="col">
                   <textarea placeholder="Your Message" id="message" name="message"
@@ -319,7 +308,7 @@
           </div>
         </form>
           <div class="heading_container text-center ">
-            <p id="Submit-form" class="heading_description"></p>
+            <p id="Submit-form" class="heading_description ms-5 me-5"></p>
           </div>
         </div>
       </div>
