--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
                                             href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
                                             class="link-light text-decoration-none "><img class="me-3"
                                                 src="https://ik.imagekit.io/ecomax/assets/images/home/email.png"
-                                                alt="images">infoecomaxlubricant@gmail .com</a></li>
+                                                alt="images">infoecomaxlubricant@gmail.com</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3">
                                         <div class="d-flex">
                                             <img class="me-3 mt-1 addres"
@@ -862,7 +862,7 @@
                                                         src="https://ik.imagekit.io/ecomax/assets/images/home/email.png"
                                                         alt="images" />
                                                     <a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
-                                                        class="link-light text-decoration-none">infoecomaxlubricant@ <br>gmail.com</a>
+                                                        class="link-light text-decoration-none">infoecomaxlubricant@gmail.com</a>
                                                 </div>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
