--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,33 +95,27 @@
                             <div class="offcanvas-body">
                                 <ul class="nav d-block">
                                     <li class="m-2">
-                                        <a href="/" class="text-success">HOME</a>
+                                        <a href="/">HOME</a>
                                     </li>
-                                    <li class="dropdown-products-res ms-2">
+                                    <li class="dropdown-products-res ">
                                 
-                                        <div class="accordion" id="accordionExample">
-                                            <button
-                                                class="accordion d-flex Fueling-text justify-content-between col-12">
-                                                <span> PRODUCTS</span>
-                                            </button>
-                                            <div class="panel1">
-                                                <div class="accordion-body p-0">
-                                                    <ul class="dropdown-menu-products-res">
-                                                        <li>
-                                                            <a href="/collections/">AUTOMOTIVE</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="/industrial/">INDUDTRIAL</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                 
-                                </li>
+                                        <li class="dropdown-products">
+                                            <a href="#" class="ms-2">
+                                                PRODUCTS
+                                            </a>
+                                            <ul class="dropdown-menu-products">
+                                                <li class="border-bottom">
+                                                    <a href="/collections/">AUTOMOTIVE</a>
+                                                </li>
+                                                <li>
+                                                    <a href="/industrial/">INDUDTRIAL</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                     </li>
 
                                     <li class="m-2">
-                                        <a href="about.html">ABOUT US </a>
+                                        <a href="about.html"  class="text-success">ABOUT US </a>
                                     </li>
                                     <li class="m-2">
                                         <a href="career.html">CAREER</a>
