--- a/career.html
+++ b/career.html
@@ -92,31 +92,27 @@
                                     <li class="m-2">
                                         <a href="/">HOME</a>
                                     </li>
-                                    <li class="dropdown-products-res ms-2">
-                                        <div class="accordion" id="accordionExample">
-                                            <button
-                                                class="accordion d-flex Fueling-text justify-content-between col-12">
-                                                <span> PRODUCTS</span>
-                                            </button>
-                                            <div class="panel1">
-                                                <div class="accordion-body p-0">
-                                                    <ul class="dropdown-menu-products-res">
-                                                        <li>
-                                                            <a href="/collections/">AUTOMOTIVE</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="/industrial/">INDUDTRIAL</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
+                                    <li class="dropdown-products-res ">
+                                
+                                        <li class="dropdown-products">
+                                            <a href="#" class="ms-2">
+                                                PRODUCTS
+                                            </a>
+                                            <ul class="dropdown-menu-products">
+                                                <li class="border-bottom">
+                                                    <a href="/collections/">AUTOMOTIVE</a>
+                                                </li>
+                                                <li>
+                                                    <a href="/industrial/">INDUDTRIAL</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                     </li>
                                     <li class="m-2">
                                         <a href="about.html">ABOUT US </a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="career.html" class="text-success1">CAREER</a>
+                                        <a href="career.html" class="text-success">CAREER</a>
                                     </li>
                                     <li class="m-2">
                                         <a href="contactus.html">CONTACT US</a>
