--- a/contactus.html
+++ b/contactus.html
@@ -142,26 +142,19 @@
                   <li class="m-2">
                     <a href="/">HOME</a>
                   </li>
-                  <li class="dropdown-products-res ms-2">            
-                    <div class="accordion" id="accordionExample">
-                        <button
-                            class="accordion d-flex Fueling-text justify-content-between col-12">
-                            <span> PRODUCTS</span>
-                        </button>
-                        <div class="panel1">
-                            <div class="accordion-body p-0">
-                                <ul class="dropdown-menu-products-res">
-                                    <li>
-                                        <a href="/collections/">AUTOMOTIVE</a>
-                                    </li>
-                                    <li>
-                                        <a href="/industrial/">INDUDTRIAL</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                </div>
-            </li>
+                  <li class="dropdown-products ps-2">
+                    <a href="#">
+                        PRODUCTS
+                    </a>
+                    <ul class="dropdown-menu-products">
+                        <li class="border-bottom">
+                            <a href="/collections/">AUTOMOTIVE</a>
+                        </li>
+                        <li>
+                            <a href="/industrial/">INDUDTRIAL</a>
+                        </li>
+                    </ul>
+                </li>
                   <li class="m-2">
                     <a href="about.html">ABOUT US </a>
                   </li>
