--- a/index.html
+++ b/index.html
@@ -104,27 +104,18 @@
                                     <li class="m-2">
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
-                                    <li class="dropdown-products-res ms-2">
-
-                                        <div class="accordion" id="accordionExample">
-                                            <button
-                                                class="accordion d-flex Fueling-text justify-content-between col-12">
-                                                <span> PRODUCTS</span>
-                                            </button>
-                                            <div class="panel1">
-                                                <div class="accordion-body p-0">
-                                                    <ul class="dropdown-menu-products-res">
-                                                        <li>
-                                                            <a href="/collections/">AUTOMOTIVE</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="/industrial/">INDUDTRIAL</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-
+                                    <li class="dropdown-products ps-2">
+                                        <a href="#">
+                                            PRODUCTS
+                                        </a>
+                                        <ul class="dropdown-menu-products">
+                                            <li class="border-bottom">
+                                                <a href="/collections/">AUTOMOTIVE</a>
+                                            </li>
+                                            <li>
+                                                <a href="/industrial/">INDUDTRIAL</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li class="m-2">
                                         <a href="about.html">ABOUT US </a>
@@ -211,7 +202,7 @@
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle58.png"
                                     alt="images" />
                             </div>
-                            <p class="about-title">About Us</p>
+                            <p class="about-title m-0">About Us</p>
                         </div>
                         <div class="About-title">
                             <h1>Welcome To Ecomax – Where Every Drop Counts!</h1>
@@ -564,12 +555,12 @@
                                         </h2>
                                         <div id="collapseOne" class="accordion-collapse  collapse show"
                                             aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                            <div class="accordion-body">
-                                                To develop and manufacture
-                                                specialty lubricant that provide
-                                                value of money along with
-                                                exceptional services support
-                                                meeting customers' expectations
+                                            <div class="accordion-body ">
+                                                <p class="Vision_text">To develop and manufacture
+                                                    specialty lubricant that provide
+                                                    value of money along with
+                                                    exceptional services support
+                                                    meeting customers' expectations</p>
                                             </div>
                                         </div>
                                     </div>
@@ -585,11 +576,11 @@
                                         <div id="collapseTwo" class="accordion-collapse collapse"
                                             aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                To develop and manufacture
-                                                specialty lubricant that provide
-                                                value of money along with
-                                                exceptional services support
-                                                meeting customers' expectations
+                                                <p class="Vision_text">To develop and manufacture
+                                                    specialty lubricant that provide
+                                                    value of money along with
+                                                    exceptional services support
+                                                    meeting customers' expectations</p>
                                             </div>
                                         </div>
                                     </div>
@@ -626,7 +617,7 @@
                     </div>
                     <div class="col-12 col-xxl-6">
                         <div class="col-12 d-flex Global-box d-flex justify-content-center flex-wrap ">
-                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab  counter d-flex justify-content-center align-items-center flex-column ">
@@ -635,7 +626,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -644,7 +635,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class=" Global_Excellence_box Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -653,7 +644,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class=" Global_Excellence_box Excllence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -897,7 +888,6 @@
     <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- bootstrap -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
