--- a/contactus.html
+++ b/contactus.html
@@ -192,7 +192,7 @@
 <!-- map Section End -->
 <!-- Contact Connect Section Start  -->
   <section class="section_padding Connect-Section">
-    <div class="page_width ">
+    <div class="page_width p-0 ">
       <div class="heading_container text-center">
         <h2 class="main-heading">
           Connect With Us
@@ -202,22 +202,22 @@
         </p>
       </div>
       <div class="contact_detail_container">
-        <div class="row gap-3 justify-content-center ">
+        <div class="row contact_detail_container_gap justify-content-center ">
           <div class="col-xl-4 col-6 contact_card  d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex gap-sm-4   gap-3">
+            <div class="d-flex contact_card_gap">
               <div class="icon_container">
                 <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Mail.png" alt="mail">
               </div>
-              <div class="contact_detail_card">
+              <div class="contact_detail_card ">
                 <p class="contact_card_heading fw-medium "> Email</p>
-                <p class="contact_detail m-0"><a
+                <p class="contact_detail me-1"><a
                     href="mailto:infoecomaxlubricant@gmail.com">infoecomaxlubricant@gmail.com</a>
                 </p>
               </div>
             </div>
           </div>
           <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex gap-sm-4 gap-3">
+            <div class="d-flex contact_card_gap">
               <div class="icon_container">
                 <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Phone.png" alt="phone">
               </div>
@@ -227,8 +227,8 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex align-items-center gap-sm-4 gap-3">
+          <div class="col-xl-4 col-6 contact_card contact_detail_add d-flex align-items-center bg-white rounded-3">
+            <div class="d-flex align-items-center contact_card_gap">
               <div class="icon_container">
                 <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Location.png" alt="location">
               </div>
