--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle58.png"
                                     alt="images" />
                             </div>
-                            <p class="about-title m-0">About Us</p>
+                            <p class="about-title m-0 ">About Us</p>
                         </div>
                         <div class="About-title">
                             <h1>Welcome To Ecomax – Where Every Drop Counts!</h1>
@@ -248,7 +248,7 @@
                                     alt="images" />
                             </div>
                             <div class="text-white text-us">
-                                <p class="d-md-none text-white">About us</p>
+                                <p class="d-md-none text-white mb-0">About us</p>
                                 <p class="d-none d-md-block text-white">Ecomax Product Features</p>
                             </div>
                         </div>
@@ -507,7 +507,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="product_btn product_btn_bak d-flex justify-content-center">
+                <div class="product_btn All_product product_btn_bak d-flex justify-content-center">
                     <div class=" btn-facility">
                         <a href="/collections/">
                             <button class="btn2 d-flex align-items-center">
@@ -853,7 +853,7 @@
                                                         src="https://ik.imagekit.io/ecomax/assets/images/home/email.png"
                                                         alt="images" />
                                                     <a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"
-                                                        class="link-light text-decoration-none">infoecomaxlubricant@gmail.com</a>
+                                                        class="link-light text-decoration-none">infoecomaxlubricant@gma<br>il.com</a>
                                                 </div>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
