--- a/contactus.html
+++ b/contactus.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
   <style>
     #chartdiv {
       width: 100%;
