--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="icon" href="/assets/images/Favicon-icon-Ecomax.png" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomax_style.css" />
 
 </head>
 
